--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>zkRingSig</title>
+  <script type="module" src="/src/polifill.tsx"></script>
+
 </head>
 
 <body style="overflow: hidden;">
