--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/zk.png" />
+  <link rel="icon" type="image/svg+xml" href="/zk.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>zkRingSig</title>
   <script type="module" src="/src/polifill.tsx"></script>
